Added try block

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,6 +1,8 @@
 @import "fonts.scss";
 @import "reset.scss";
+@import "risk-button.scss";
 @import "intro.scss";
 @import "about.scss";
 @import "advantages.scss";
 @import "expirience.scss";
+@import "try.scss";
