--- a/app/sass/expirience.scss
+++ b/app/sass/expirience.scss
@@ -137,13 +137,16 @@ padding-left: 140px;
 
 }
 .expirience__city-header{
-
-	margin-bottom: 140px;
+    max-width: 650px;
+	margin: 80px auto 130px;
 
 }
 
 }
 @media screen and (min-width: 1170px) {
+	.expirience__city{
+		margin-bottom: 100px;
+	}
 .expirience__list-forest{
 	
 	width:1000px;
@@ -180,14 +183,9 @@ padding-left: 20px;
 
 }
 
-.expirience__city-header{
-	max-width: 650px;
-	margin: 80px auto 130px;
 
-}
 .expirience__list-city{
 	display: flex;
-	
 	padding-left: 60px;
     padding-right: 0px;
 	list-style: none;
