add skills block(without svg)

--- a/app/sass/about.scss
+++ b/app/sass/about.scss
@@ -27,21 +27,6 @@
 }	
 
 
-@mixin about-dot{
-	    content:"";
-    	display: block;
-    	width:10px;
-    	height: 10px;
-    	border-radius:50%;
-    	background-color: $main-color;
-    	border-width:5px;
-    	border-style:solid;
-    	border-color: rgba(255, 229, 229, 1);
-    	position: absolute;
-    	left:45px;
-    	
-
-}
 @mixin about-p{
 	width:100px;
 	margin:0 auto;
@@ -56,7 +41,9 @@
 	@include about-p;
 	margin-bottom:75px;
     &:after{
-    	@include about-dot;
+    	@include dot;
+    
+    	left:45px;
     	top:40px;
     }
 
@@ -64,8 +51,10 @@
  .about-finish{
  	@include about-p;
  	&:before{
- 		@include about-dot;
+ 		@include dot;
  		bottom:40px;
+ 		
+    	left:45px;
  	}
  }
 .about__item{
