--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,5 +1,6 @@
 @import "fonts.scss";
 @import "reset.scss";
+@import "mixins.scss";
 @import "risk-button.scss";
 @import "intro.scss";
 @import "about.scss";
@@ -7,3 +8,5 @@
 @import "expirience.scss";
 @import "try.scss";
 @import "skills.scss";
+@import "programm.scss";
+
