--- a/app/sass/testimonials.scss
+++ b/app/sass/testimonials.scss
@@ -5,7 +5,7 @@
     font-family: 'core_sans_e45_regular', Arial, sans-serif;
     font-size:16px;
     line-height: 1.5;
-   padding: 0 15px;
+    
 }
 .testimonials-header{
     @include header-main-color;
@@ -27,10 +27,14 @@
     margin: -1px;
   }
 .testimonials__video{
+    box-sizing: border-box;
    width: 100%;
    height: auto; 
    margin: 0 auto;
-   position: relative;}
+   position: relative;
+   padding: 0 15px;
+   
+}
    #playBtn{
 
 	background-image: url(../images/VideoPlay.png);
@@ -59,7 +63,19 @@
     height: auto;
     max-height: 100%;
   }
-
+  .testimonials__item{
+    background-image: url(../images/VideoItemBgMob.jpg);
+background-repeat:no-repeat;
+background-size: cover; 
+min-height: 727px;
+}
+.testimonials-foto{
+margin-top: 100px;
+}
+.item__text{
+    height: 150px;
+    overflow: hidden;
+}
 @media screen and (min-width: 750px) {
     .testimonials{
      background-image: url(../images/VideoBgTab.jpg);
@@ -75,12 +91,23 @@
     
     }
     }
+    .testimonials__item{
+    max-width: 765px;
+    display: block;
+    min-height: 541px;
+    background-image: url(../images/VideoItemBgTab.png);
+	background-repeat:no-repeat;
+    background-size:765px auto; 
+    background-position: cover;
+    box-shadow: 30px 0 20px -20px rgba(240, 240, 240, 0.3),-30px 0 20px -20px rgba(240, 240, 240, 0.3);
+    margin: 0 auto;
+    box-sizing: border-box;
+    overflow: hidden;
+    }
 }
 @media screen and (min-width: 1170px) {
     .testimonials{
-        background-image: url(../images/VideoBgDesk.jpg);
-       background-repeat:no-repeat;
-       background-size: cover;
+    
        }
     .testimonials-header{
         font-size: 68px;
@@ -94,4 +121,8 @@
     .testimonials__video{
         max-width: 1140px;
     }
+    .testimonials__item{
+        max-width: 1140px;
+        background-size:1140px auto; 
+        }
 }
