--- a/app/sass/map.scss
+++ b/app/sass/map.scss
@@ -8,6 +8,7 @@
 .map-foto{
     width: 100%;
     height: auto;
+    display: block;
 }
 .map-wrapper{
     position: relative;
@@ -60,13 +61,18 @@
 	
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 545px) {
     .map-header{
         height: 70px;
         line-height: 70px;
-        
-        margin-bottom: 10px;
         margin-top: 20px;
+    }
+}
+@media screen and (min-width: 750px) {
+    .map-header{
+    
+        margin-bottom: 10px;
+        
         @include header-main-color;
         font-size: 48px;
         &:after{
