--- a/app/sass/footer.scss
+++ b/app/sass/footer.scss
@@ -3,29 +3,67 @@
 
 .footer{
     color: $header-color;
+    text-align: center;
 }
 .footer-tel{
     text-decoration: none;
     font-family: 'core_sans_e55_medium',Arial, sans-serif;
     font-size: 18px;
     color: $header-color;
+   display: block;
+    margin:50px 0;
 }
 .footer-privacy{
+    
     font-family: 'core_sans_e45_regular', Arial, sans-serif;
     font-size: 14px;
     color: $header-color;
     text-decoration: none;
   border-bottom: 2px dashed $header-color;
+  
+}
+.footer-logo__wrapper{
+    position: relative;
+    margin-bottom: 50px;
+}
+.footer-logo{
+    margin-top: 50px;
+    
 }
 .footer-copyyear{
     font-family: 'core_sans_e55_medium',Arial, sans-serif;
     font-size: 14px; 
+    position: absolute;
+    left:47%;
+    top:82%;
 }
 @media screen and (min-width: 750px) {
+    .footer{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin:35px 20px;
+    }
 
+    .footer-tel{
+        display: inline;
+        margin: 0;
+        order:1;
+    }
+    .footer-logo__wrapper{
+        padding-top: 12px;
+        order:-1;
+        margin:0;
+    }
+    .footer-logo{
+        margin: 0;
+    }
 }
 
 
 @media screen and (min-width: 1170px) {
-
+    .footer{
+        max-width: 945px;
+        margin: 0 auto;
+    }
 }
