--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,6 +1,7 @@
 @import "fonts.scss";
 @import "reset.scss";
 @import "mixins.scss";
+@import "animation.scss";
 @import "risk-button.scss";
 @import "intro.scss";
 @import "about.scss";
