--- a/app/sass/map.scss
+++ b/app/sass/map.scss
@@ -25,20 +25,27 @@
 .map-city{
     list-style: none;
     position: absolute;
-     
+    
     
 }
 .city-first{
     left: 18.75%;
     top:38.8%;
+    &:hover:before{
+        @include animation-move;  
+    }
     &:before{
-        @include dot;      
+        @include dot;   
+         
     }
     
 }
 .city-second{
     left: 53.12%;
     top:31%;
+    &:hover:before{
+        @include animation-move;  
+    }
     &:before{
         @include dot;      
     }
@@ -47,6 +54,9 @@
 .city-third{
     left: 19.75%;
     top:68.8%;
+    &:hover:before{
+        @include animation-move;  
+    }
     &:before{
         @include dot;      
     }
@@ -55,6 +65,9 @@
 .city-fourth{
     left: 78.75%;
     top:67.8%;
+    &:hover:before{
+        @include animation-move;  
+    }
     &:before{
         @include dot;      
     }
@@ -117,6 +130,9 @@
     .city-fifth{
         left: 23.75%;
         top:84.8%;
+        &:hover:before{
+            @include animation-move;  
+        }
         &:before{
             @include dot;      
         }
@@ -125,6 +141,9 @@
     .city-six{
         left: 78.75%;
         top:25.8%;
+        &:hover:before{
+            @include animation-move;  
+        }
         &:before{
             @include dot;      
         }
@@ -155,6 +174,9 @@
     .city-seven{
         left: 18.75%;
         top:77.8%;
+        &:hover:before{
+            @include animation-move;  
+        }
         &:before{
             @include dot;      
         }
