--- a/app/sass/expirience.scss
+++ b/app/sass/expirience.scss
@@ -4,7 +4,7 @@
 .expirience{
 	font-family: 'core_sans_e45_regular', Arial, sans-serif;
     font-size:16px;
-   
+	overflow: hidden;
 }
 .expirience__forest{
 	text-align: center;
@@ -12,12 +12,15 @@
 }
 .expirience-header{
 	@include header-main-color;
-	margin-bottom: 60px;
-
+	margin-bottom:40px;
+	margin-top:30px;
+    height: 70px;
+	line-height: 70px;
 	  &:after{
 
      content:"Ты узнаешь";
-    @include header-background;
+	@include header-background;
+	
 }
 }
 .expirience__list-forest{
