--- a/app/sass/questions.scss
+++ b/app/sass/questions.scss
@@ -18,6 +18,8 @@
         font-size: 48px;
         font-weight: 300;
         padding-top: 80px;
+        display: block;
+        margin: 0 auto;
        
     }
     .questions-paragraf{
