add js for popup

--- a/app/sass/popup.scss
+++ b/app/sass/popup.scss
@@ -44,7 +44,7 @@
 	height: 25px;
 	
     cursor: pointer;
-    &:hover, &focus{
+    &:hover, &:focus{
         background-image: url(../images/closeBtnHover.png);
     }
 }
