--- a/app/sass/testimonials.scss
+++ b/app/sass/testimonials.scss
@@ -81,7 +81,8 @@ margin-bottom: 30px;
     height: 150px;
     overflow: hidden;
     padding: 0 15px;
-    
+    max-width: 400px;
+    margin: 0 auto 15px auto;
 }
 .testimonials__item-read{
     font-family: 'core_sans_e45_regular', Arial, sans-serif;
@@ -181,15 +182,13 @@ margin-bottom: 30px;
     }
     .testimonials__item-wrapper{
         position: absolute;
-    min-width: 750px;
-    width:auto;
+    width: 750px;
     display: flex;
-    min-height: 560px;
-    background-image: url(../images/VideoItemBgTab.png);
+    align-items: flex-start;
+    min-height: 550px;
+    background-image: url(../images/VideoItemBgDesk.png);
 	background-repeat:no-repeat;
-    background-size:765px auto; 
-    background-position: center;
- // box-shadow: 30px 0 20px -20px rgba(218, 216, 216, 0.1),-30px 0 20px -20px rgba(218, 216, 216, 0.1);
+    background-size:100% 550px; 
     margin: 0 auto;
     box-sizing: border-box;
     overflow: hidden;
@@ -200,7 +199,7 @@ margin-bottom: 30px;
     .testimonials-foto{
         margin-top: 100px;
         margin-bottom: 0;
-        margin-left: 50px;
+        margin-left: 70px;
         }
         .testimonials__item-header{
             margin-top: 100px;
@@ -234,6 +233,7 @@ margin-bottom: 30px;
     }
     .testimonials__item-wrapper{
         max-width: 1170px;
+        width:auto;
     background-image: url(../images/VideoItemBgDesk.png);
     background-size:1170px auto;
     }
