add js for testimonials section

--- a/app/sass/map.scss
+++ b/app/sass/map.scss
@@ -154,6 +154,7 @@
 @media screen and (min-width: 1170px) {
     .map-header{
         margin-top: 50px;
+        margin-bottom: 50px;
     }
     .city-fifth{
         left: 23.75%;
