--- a/app/sass/questions.scss
+++ b/app/sass/questions.scss
@@ -41,17 +41,8 @@
 }
     .question-input{
 
-  box-sizing: border-box;
-  display: block;
+  @include input-style;
   width: 100%;
-  padding:20px 20px;
-  margin-bottom: 30px;
-  border-width: 0;
-  border-radius: 30px;
-  color: white;
-  background: rgba(255,255,255,.1);
-  font-family: 'core_sans_e45_regular', Arial, sans-serif;
-  font-size: 16px;
     }
  .question-button{
     margin: 0 auto;
